src/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network issues</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactKey__c</fullName>
        <label>ContactKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Term_End_Date__c</fullName>
        <label>Current Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Term__c</fullName>
        <label>Current Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days to Lapse</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit</label>
        <referenceTo>Direct_Debits__c</referenceTo>
        <relationshipLabel>Membership</relationshipLabel>
        <relationshipName>Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enable_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_Date__c</fullName>
        <label>Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Membership (First Contact)</relationshipLabel>
        <relationshipName>Membership1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grace_Period_End_Date__c</fullName>
        <label>Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Grace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Grace Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <label>Include</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joined__c</fullName>
        <label>Joined</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Key__c</fullName>
        <label>Membership Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/Debit Card(£57)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£9.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£57)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit card(£48)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£12 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£48)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit card(£120)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£120)</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit card(£10)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£ 2.50 per quarter)</fullName>
                </value>
                <value>
                    <fullName>Direct Debit(£ 10)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Membership (Second Contact)</relationshipLabel>
        <relationshipName>Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>online</fullName>
                </value>
                <value>
                    <fullName>offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Due_Total__c</fullName>
        <label>Subscription Due Total</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Membership Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Membership Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18 Month Membership</fullName>
                </value>
                <value>
                    <fullName>12 Month Membership</fullName>
                </value>
                <value>
                    <fullName>Four year Membership</fullName>
                </value>
                <value>
                    <fullName>Reduced 12 Month Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>subscription_plan__c</fullName>
        <label>Subscription Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6 Month Plan</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>12 Month Plan</fullName>
                </value>
                <value>
                    <fullName>3 Month Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Status__c</columns>
        <columns>subscription_plan__c</columns>
        <columns>Term__c</columns>
        <columns>Activated_Date__c</columns>
        <columns>Expired_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>